--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -83,8 +83,8 @@
 .center::before {
   background: var(--secondary-glow);
   border-radius: 50%;
-  width: 480px;
-  height: 360px;
+  width: 100%;
+  height: 100%;
   margin-left: -400px;
 }
 
@@ -283,12 +283,14 @@
   border: 1px solid #eaeaea;
   list-style-type: none;
   clear:none; 
-  padding:0;
-  margin:0;
+  padding:0 0 0 0;
+  margin:0 0 0 0;
 }
 .cityline {
   white-space: pre-wrap;
   color: #0070f3;
+  padding:0 0 0 0;
+  margin:0 0 0 0;
 }
 .cityline:hover,
 .cityline:focus,
@@ -296,4 +298,18 @@
   color: #0070f3;
   border-radius: 10px;
   outline:3px solid #eaeaea;
+}
+.map {
+  width: 110px;
+  height: 110px;
+}
+.map:hover,
+.map:focus,
+.map:active {
+  color: #0070f3;
+  border-image: url(/art/fon/fon_theme.jpg) round;
+  border-image-slice: calc(50 / 184 * 100%) calc(80 / 284 * 100%) fill;
+  border-radius: 100px;
+  outline: 3px solid #eee7e7;
+  
 }
